this is a thing

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,7 @@
     <title>Ticket System</title>
 </head>
 <body>
-    <h1>Ticket List</h1>
-    <ul>
-    {% for ticket in tickets %}
-        <li><strong>{{ ticket.title }}</strong>: {{ ticket.description }}</li>
-    {% endfor %}
-    </ul>
-    <a href="{{ url_for('create_ticket') }}">Create Ticket</a>
+    <h1>Welcome to the Ticket System</h1>
+    <a href="{{ url_for('login') }}">Login</a>
 </body>
 </html>
