this is a thing

--- a/templates/ticket_response_view.html
+++ b/templates/ticket_response_view.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Ticket Response</title>
+    <title>Respond to Ticket</title>
 </head>
 <body>
     <h1>Respond to Ticket</h1>
