--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Ticket System</title>
 </head>
 <body>
-    <h1>Welcome to the Ticket System</h1>
+    <h1>Ask for help</h1>
     <a href="{{ url_for('login') }}">Login</a>
 </body>
 </html>
